Fix spacing on "Usage dashboard missing" text

--- a/src/components/views/css/Application.css
+++ b/src/components/views/css/Application.css
@@ -14,11 +14,3 @@ body {
 p {
     line-height: 1.3;
 }
-
-p:first-of-type:not(:only-of-type) {
-    margin-top: 0;
-}
-
-p:last-of-type:not(:only-of-type) {
-    margin-bottom: 0;
-}
