--- a/src/components/views/css/Dashboard.css
+++ b/src/components/views/css/Dashboard.css
@@ -1,4 +1,4 @@
 #dashboard h2 {
     text-align: center;
-    margin: 0;
+    margin: 20px 0;
 }
